2002-02-22  Ian Lance Taylor  <ian@airs.com>

	* Marcus Shang: unix/xqtsub.c (fsysdep_execute): If the output
	file is in the spool directory, create subdirectories if
	necessary.

	* uucico.c (fconn_call): If all matching ports are in use, set
	system status to STATUS_PORT_FAILED.

	* uuchk.c (ukhelp): Update copyright.  Add bug reporting address.
	* uucico.c (uhelp): Likewise.
	* uucp.c (uchelp): Likewise.
	* uulog.c (ulhelp): Likewise.
	* uuname.c (unhelp): Likewise.
	* uustat.c (ushelp): Likewise.
	* uux.c (uxhelp): Likewise.
	* uuxqt.c (uqhelp): Likewise.
	* cu.c (ucuhelp): Likewise.  Output to stdout.
	* uuconv.c (uvhelp): Likewise.
	* uupick.c (uphelp): Likewise.

	* uuchk.c (main): Update version statement to current GNU
	standard.  Update copyright in version statement.
	* uucico.c (main): Likewise.
	* uucp.c (main): Likewise.
	* uulog.c (main): Likewise.
	* uuname.c (main): Likewise.
	* uustat.c (main): Likewise.
	* uux.c (main): Likewise.
	* uuxqt.c (main): Likewise.
	* cu.c (main): Likewise.  Output version to stdout.
	* uuconv.c (main): Likewise.
	* uupick.c (main): Likewise.

	* Tim Pozar: uucp.texi (Acknowledgements): Note that gnuucp was
	based on uuslave.

	* Michael Ju. Tokarev: unix/serial.c (fsserial_hardflow): Add
	support for CRTSXOFF used on Solaris.

	* unix/serial.c (fsserial_lockfile): In HAVE_SCO_LOCKFILES case,
	only lower case the last letter in the lock file name.
	* uucp.texi (UUCP Lock Files): Document this change.

	* unix/serial.c (fsblock): Test for EINVAL when changing the write
	descriptor as we do when changing the read descriptor.

	* unix/seq.c (ixsysdep_get_sequence): If SPOOLDIR_HDB or
	SPOOLDIR_SVR4, use .SQFILE for the name of the sequence directory,
	to avoid colliding with the command sequence number file used by
	fscmd_seq.  It's not compatible at the file level, but it might
	work.

	* uucico.c (fspawn_uuxqt): Ignore the zsys parameter.

	* Godfrey van der Linden: unix/serial.c (fsysdep_conn_io): Limit